--- a/volatility_impact_on_returns.ipynb
+++ b/volatility_impact_on_returns.ipynb
@@ -10,8 +10,8 @@
     "\n",
     "Constants between scenarios:\n",
     "* 30 years\n",
-    "* Adding \\$5,500 per year to fund\n",
-    "* Starting with \\$0 in the beginning\n",
+    "* Adding `$`5,500 per year to fund\n",
+    "* Starting with `$`0 in the beginning\n",
     "\n",
     "First, we'll these test 3 mutual funds:\n",
     "* mean of 8% return per year, and standard deviation of 2%\n",
@@ -578,7 +578,7 @@
    "source": [
     "However, what if you want to know the probability of having *at least* some amount of money at retirement? How does volatility affect those goals? Let's find out.\n",
     "\n",
-    "Let's say you want at least $600,000 to retire. What's the probability of reaching at least that with each of our 3 hypothetical mutual funds?"
+    "Let's say you want at least `$`600,000 to retire. What's the probability of reaching at least that with each of our 3 hypothetical mutual funds?"
    ]
   },
   {
@@ -675,14 +675,23 @@
    "source": [
     "## Conclusion 2\n",
     "\n",
-    "Wow, so the probability of reaching at least \\$600,000 for retirement if you go with:\n",
+    "Wow, so the probability of reaching at least `$`600,000 for retirement if you go with:\n",
     "\n",
-    "* the 2% standard deviation mutual fund has a 30% probability of reaching \\$600,000\n",
-    "* the 10% standard deviation mutual fund has a 30% probability of reaching \\$600,000\n",
-    "* the 30% standard deviation mutual fund has a 30% probability of reaching \\$600,000\n",
+    "* the 2% standard deviation mutual fund has a 30% probability of reaching `$`600,000\n",
+    "* the 10% standard deviation mutual fund has a 30% probability of reaching `$`600,000\n",
+    "* the 30% standard deviation mutual fund has a 30% probability of reaching `$`600,000\n",
     "\n",
     "**So if you need to make sure you reach a certain amount, then it probabily is better to go with lower volatility investments.**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
