Fixed mean to volatility ratios

--- a/vanguard_fund_analysis.ipynb
+++ b/vanguard_fund_analysis.ipynb
@@ -6457,7 +6457,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example mean -> std devs"
+    "### Example mean -> std devs\n",
+    "\n",
+    "These numbers are higher than I expected. I wouldn't think the standard deviation at 4% mean return would be like 16%."
    ]
   },
   {
@@ -6524,123 +6526,6 @@
    ],
    "source": [
     "investment_mean_to_std(4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This seems odd to me at fist, but then again, these returns are on a monthly basis. 4% per month return is 48% per year. That's ridiculously high. Let's look at more normal levels."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 403,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5.2140779687935179"
-      ]
-     },
-     "execution_count": 403,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "investment_mean_to_std(10/12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 404,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.6648211734485638"
-      ]
-     },
-     "execution_count": 404,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "investment_mean_to_std(8/12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 405,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.1155643781036089"
-      ]
-     },
-     "execution_count": 405,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "investment_mean_to_std(6/12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 406,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.5663075827586543"
-      ]
-     },
-     "execution_count": 406,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "investment_mean_to_std(4/12)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 410,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.7424223897412228"
-      ]
-     },
-     "execution_count": 410,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "investment_mean_to_std(1/12)"
    ]
   },
   {
